--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:16.0.1'
     implementation 'com.google.firebase:firebase-messaging:17.0.0'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
-    implementation 'com.facebook.android:facebook-login:[5,6)'
+    implementation 'com.facebook.android:facebook-login:4.40.0'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
+
+    implementation 'com.yarolegovich:lovely-dialog:1.0.4'
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.android.support:percent:27.1.0'
+
 
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
@@ -48,6 +53,7 @@ dependencies {
 
     // JSON Parsing
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.firebaseui:firebase-ui-database:4.2.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
